<resources>
    <string name="app_name">柯南卫士</string>
    <string name="splash_version">版本号:1.0.1</string>

    <!--手机防盗模块-->
    <string name="anti_theft">手机防盗</string>
    <string name="dialog_set_password">请设置密码</string>
    <string name="set_password">请输入密码</string>
    <string name="repeat_set_password">请再次输入密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="message_function">短信指令功能简介</string>

    <!--通讯卫士模块-->
    <string name="communication">通讯卫士</string>
    <string name="empty_black_number">您还没有添加任何黑名单</string>
    <string name="add_black_number">添加黑名单</string>
    <string name="edit_black_number">编辑黑名单</string>
    <string name="add_phone_number">请输入要添加的号码</string>
    <string name="add_name">请输入名称</string>
    <string name="phone_intercept">电话拦截</string>
    <string name="message_intercept">短信拦截</string>
    <string name="add_from_contacts">从联系人中添加</string>
    <string name="select_contacts">选择联系人</string>

    <!--软件管家模块-->
    <string name="app_manager">软件管家</string>

    <!--手机杀毒模块-->
    <string name="virus_kill">病毒查杀</string>
    <string name="virus_kill_scan">病毒查杀进度</string>
    <string name="cancel_scan">取消扫描</string>
    <string name="restart_scan">重新扫描</string>
    <string name="finish">完成</string>

    <!--缓存清理模块-->
    <string name="scan_cache">缓存扫描</string>
    <string name="clean_cache">缓存清理</string>
    <string name="one_click_clean">一键清理</string>
    <string name="scanning">正在扫描: </string>
    <string name="already_scan">已扫描缓存: </string>

    <!--进程管理模块-->
    <string name="progress_manager">进程管理</string>
    <string name="clear">清理</string>
    <string name="all_selected">全选</string>
    <string name="contract_selected">反选</string>

    <!--流量统计-->
    <string name="traffic_monitor">流量统计</string>
    <string name="carrierOpera">运营商信息设置</string>
    <string name="carrierOpera_selected">运营商选择</string>
    <string name="message">仅一次简单设置，以后即可便捷矫正流量，时刻保持与运营商的精确同步。</string>

    <!--高级工具-->
    <string name="advanced_tools">高级工具</string>
    <string name="number_belong_to">号码归属地查询</string>
    <string name="search_number">请输入要查询的号码</string>
    <string name="search">查询</string>
    <string name="app_lock">程序锁</string>
</resources>
