<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_add_black_number_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_phone_number"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_add_black_number_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:checked="true"
            android:text="@string/phone_intercept"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_message"
            android:checked="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/message_intercept"/>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
    android:id="@+id/qmui_round_button_black_number_contact_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_from_contacts"
    android:textSize="18sp"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    app:qmui_backgroundColor="@color/qmui_config_color_gray_2"
    app:qmui_borderColor="@color/qmui_config_color_gray_2"
    android:textColor="@color/white"
    android:layout_gravity="center_horizontal"
    app:qmui_isRadiusAdjustBounds="true"/>



</LinearLayout>
