<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"/>

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_progress_manager_running"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="运行中的进程"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_progress_manager_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="可用/总内存"
            android:layout_alignParentRight="true"
            android:textColor="@color/gray"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_progress_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_runningprocess"
            android:background="@color/qmui_config_color_gray_9"
            android:textColor="@color/qmui_config_color_gray_2"
            android:padding="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            style="@style/BottomButton"
            android:text="@string/clear"
            android:paddingHorizontal="25dp"
            android:layout_alignParentLeft="true"
            app:qmui_backgroundColor="@color/qmui_config_color_gray_2"
            app:qmui_borderColor="@color/qmui_config_color_gray_2"
            android:textColor="@color/white"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:paddingHorizontal="25dp"
            android:layout_width="wrap_content"
            style="@style/BottomButton"
            android:text="@string/all_selected"
            android:layout_centerHorizontal="true"
            app:qmui_backgroundColor="@color/qmui_config_color_gray_2"
            app:qmui_borderColor="@color/qmui_config_color_gray_2"
            android:textColor="@color/white"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:layout_marginRight="10dp"
            android:paddingHorizontal="25dp"
            android:layout_width="wrap_content"
            style="@style/BottomButton"
            android:text="@string/contract_selected"
            android:layout_alignParentRight="true"
            app:qmui_backgroundColor="@color/qmui_config_color_gray_2"
            app:qmui_borderColor="@color/qmui_config_color_gray_2"
            android:textColor="@color/white"/>

    </RelativeLayout>
</LinearLayout>
